--- a/src/features/PersonalInfoTab/PersonalInfoTab.module.css
+++ b/src/features/PersonalInfoTab/PersonalInfoTab.module.css
@@ -2,8 +2,8 @@
 .Tab {
     flex: 1;
     position: relative;
-    width: 90vw;
-    height: 40vh;
+    width: 90%;
+    height: 40%;
     min-width: 400px;
     min-height: 300px;
     max-width: 1000px;
@@ -17,8 +17,8 @@
 }
 
 .Tab .Cover {
-    width: 90vw;
-    height:20vh;
+    width: 90%;
+    height:20%;
     min-width: 400px;
     min-height: 150px;
     max-width: 1000px;
@@ -59,12 +59,6 @@
     width: 100px;
     height: 30px;
     border: none;
-    background: #E1E1E1;
-    border-radius: 15px;
-}
-
-.Tab .Edit:hover{
-    background-color: #D1D1D1;
 }
 
 
