--- a/src/features/PersonalInfoTab/PersonalInfoTab.module.css
+++ b/src/features/PersonalInfoTab/PersonalInfoTab.module.css
@@ -1,4 +1,3 @@
-
 .Tab {
     flex: 1;
     position: relative;
@@ -8,7 +7,7 @@
     min-height: 300px;
     max-width: 1000px;
     max-height: 700px;
-    margin: 0px auto;
+    margin: 50px auto;
     background-color: #FEFEFE;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -18,14 +17,16 @@
 
 .Tab .Cover {
     width: 90%;
-    height:20%;
+    height:50%;
     min-width: 400px;
     min-height: 150px;
     max-width: 1000px;
-    max-height: 350px;
+    max-height: 450px;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     background-color: black;
+    margin-left:auto;
+    margin-right: auto;
 }
 
 .Tab #TempIcon {
