--- a/src/views/FrontPage/App.css
+++ b/src/views/FrontPage/App.css
@@ -1,4 +1,127 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(32, 35, 48);
+}
+
+#logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: fill 1.5s ease forwards 3s;
+}
+
+#brand {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#soccer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-250%, +75%);
+  animation: fill 1.5s ease forwards 3.5s;
+}
+#basketball {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-155%, +75%);
+  animation: fill 1.5s ease forwards 3.5s;
+}
+#baseball {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-60%, +75%);
+  animation: fill 1.5s ease forwards 3.5s;
+}
+#football {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(+35%, +75%);
+  animation: fill 1.5s ease forwards 3.5s;
+}
+#cricket {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(+130%, +75%);
+  animation: fill 1.5s ease forwards 3.5s;
+}
+
+#buttons {
+  top: 50%;
+  left: 50%;
+  transform: translate(0%, +410%);
+  animation: fill 0.5s ease forwards 3s;
+}
+
+
+#logo path:nth-child(1) {
+  stroke-dasharray: 493px;
+  stroke-dashoffset: 493px;
+  animation: line-anim 2s ease forwards;
+}
+
+#logo path:nth-child(2) {
+  stroke-dasharray: 310px;
+  stroke-dashoffset: 310px;
+  animation: line-anim 2s ease forwards 0.3s;
+}
+
+#logo path:nth-child(3) {
+  stroke-dasharray: 322px;
+  stroke-dashoffset: 322px;
+  animation: line-anim 2s ease forwards 0.6s;
+}
+
+#logo path:nth-child(4) {
+  stroke-dasharray: 408px;
+  stroke-dashoffset: 408px;
+  animation: line-anim 2s ease forwards 0.9s;
+}
+
+#logo path:nth-child(5) {
+  stroke-dasharray: 337px;
+  stroke-dashoffset: 337px;
+  animation: line-anim 2s ease forwards 1.2s;
+}
+
+#logo path:nth-child(6) {
+  stroke-dasharray: 373px;
+  stroke-dashoffset: 373px;
+  animation: line-anim 2s ease forwards 1.5s;
+}
+
+@keyframes line-anim{
+  to{
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fill{
+  to{
+    fill: white;
+  }
+}
+
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -36,4 +159,4 @@
   100% {
     transform: translateY(0px)
   }
-}
+} */
